--- a/src/main/resources/templates/pedidos/lista.html
+++ b/src/main/resources/templates/pedidos/lista.html
@@ -21,7 +21,7 @@
                         <th>Precio</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="pedidosTableBody">
                     <tr th:each="pedido : ${pedidos}">
                         <td th:text="${pedido.nombrePlato}"></td>
                         <td th:text="'€ ' + ${pedido.precio}"></td>
@@ -53,19 +53,21 @@
         </div>
     </div>
 
-    <form class="mt-3" th:action="@{/pedido/finalizarPedido}" method="post">
+    <form class="mt-3" th:action="@{/pedido/finalizarPedido}" method="post" id="finalizarPedidoForm">
         <button type="submit" class="btn btn-primary">Finalizar Pedido</button>
+        <span class="error" id="finalizarPedidoError"></span>
     </form>
 
     <!-- Formulario para enviar el recibo por email -->
     <div class="mt-3">
         <h2>Enviar Recibo por Email</h2>
-        <form th:action="@{/pedido/enviarReciboEmail}" method="post">
+        <form th:action="@{/pedido/enviarReciboEmail}" method="post" id="enviarReciboEmailForm">
             <div class="form-group">
                 <label for="email">Correo Electrónico</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
             </div>
             <button type="submit" class="btn btn-secondary">Enviar Email y Finalizar</button>
+            <span class="error" id="enviarReciboEmailError"></span>
         </form>
     </div>
 </div>
@@ -73,6 +75,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script th:src="@{/js/validaciones.js}"></script>
 </body>
 </html>
 
