--- a/src/main/resources/templates/fragments/barraMenu.html
+++ b/src/main/resources/templates/fragments/barraMenu.html
@@ -1,3 +1,4 @@
+
 <nav th:fragment="barraMenu" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand">DISH PLANET</a>
@@ -32,7 +33,7 @@
         </li>
       </ul>
       <div class="ms-auto d-flex">
-        <div class="nav-item">
+        <div class="nav-item" th:if="${!#authorization.expression('isAuthenticated()')}">
           <a class="nav-link" th:href="@{/usuario/login}">
             <i class="fas fa-user"></i>
           </a>
@@ -46,7 +47,7 @@
       </div>
     </div>
   </div>
-  <div class="nav-item">
+  <div class="nav-item" th:if="${#authentication.name == 'admin'}">
     <a class="nav-link" th:href="@{/panel}">
       <i class="nav-link">Herramientas</i>
     </a>
