--- a/src/main/resources/templates/login/signup.html
+++ b/src/main/resources/templates/login/signup.html
@@ -10,10 +10,11 @@
 <div class="container">
   <div class="registro-box">
     <h1>Registro</h1>
-    <form th:action="@{/usuario/signup}" method="post">
+    <form id="registroForm" th:action="@{/usuario/signup}" method="post">
       <div class="form-group username">
         <label>Usuario:</label>
-        <input type="text" name="username" required>
+        <input type="text" id="username" name="username" required>
+        <span class="error" id="errorUsername"></span>
       </div>
       <div class="form-group password">
         <label>Contraseña:</label>
@@ -27,5 +28,6 @@
     </form>
   </div>
 </div>
+<script th:src="@{/js/validaciones.js}"></script>
 </body>
 </html>
