--- a/src/main/resources/templates/pedidos/verPedidos.html
+++ b/src/main/resources/templates/pedidos/verPedidos.html
@@ -12,7 +12,7 @@
 <nav th:replace="~{fragments/barraMenu::barraMenu}"></nav>
 <h1>Historial de Pedidos</h1>
 <div class="table-container">
-  <table class="table">
+  <table class="table table-striped">
     <thead>
     <tr>
       <th>Nombre del Plato</th>
