--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -1,3 +1,5 @@
+
+/* Estilo global */
 * {
     margin: 0;
     padding: 0;
@@ -5,16 +7,30 @@
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Estilo del navbar */
 .navbar {
     position: fixed;
-    top: 0; /* Lo fija en la parte superior */
-    width: 100%; /* Opcional: hace que el ancho sea del 100% */
-    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
+
+/* Estilo de los enlaces en el navbar */
+.navbar .nav-link {
+    color: #fff; /* Texto blanco */
+    transition: color 0.3s ease; /* Transición suave */
+}
+
+.navbar .nav-link:hover {
+    color: #ffc107; /* Texto amarillo al pasar el mouse */
+}
+
+/* Estilo del footer */
 footer {
-    background-color: #575757; /* Dark background color */
-    color: #fff; /* White text color */
-    padding: 10px 0; /* Reduced padding */
+    background-color: #575757;
+    color: #fff;
+    padding: 10px 0;
 }
 
 footer .container {
@@ -33,23 +49,22 @@ footer .row {
 footer .col-md-3 {
     flex: 0 0 25%;
     max-width: 25%;
-    padding: 5px; /* Reduced padding */
+    padding: 5px;
     text-align: center;
 }
 
 footer .footer-logo {
-    max-width: 150px; /* Ancho máximo de la imagen */
-    height: auto; /* Altura automática para mantener la proporción */
+    max-width: 150px;
+    height: auto;
 }
 
 footer i {
-    margin-right: 5px; /* Reduced margin */
+    margin-right: 5px;
     font-size: 1em;
-    /* Reduced icon size */
 }
 
 footer span {
-    font-size: 0.9em; /* Reduced font size */
+    font-size: 0.9em;
 }
 
 @media (max-width: 768px) {
@@ -65,6 +80,6 @@ footer span {
         flex: 0 0 100%;
         max-width: 100%;
         text-align: center;
-        margin-bottom: 10px; /* Reduced margin */
+        margin-bottom: 10px;
     }
 }
