--- a/src/main/resources/static/css/reservas.css
+++ b/src/main/resources/static/css/reservas.css
@@ -1,4 +1,3 @@
-/* inventario.css */
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +5,7 @@
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -13,20 +13,34 @@ body {
     background-image: url('../img/log.jpg');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     color: yellow;
     margin-bottom: 20px;
 }
 
-table {
-
+.container {
     width: 80%;
     margin: 0 auto;
+    padding: 20px;
+
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+form {
+    display: inline-block;
+    width: 300px;
+}
+
+table {
+    width: 100%;
+    margin: 20px 0;
     border-collapse: collapse;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -53,17 +67,12 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-.form-group {
-    display: flex;
-    align-items: center;
-}
-
-input[type="number"] {
+input[type="datetime-local"], input[type="text"], input[type="number"] {
     margin-right: 10px;
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 3px;
-    width: 80px;
+    width: calc(100% - 20px);
 }
 
 button.btn-primary {
@@ -83,10 +92,11 @@ button.btn-primary {
 button.btn-primary:hover {
     background-color: #0056b3;
 }
+
 .searchBox {
-    position: fixed; /* Cambiado de relative a fixed */
-    top: 50px; /* Ajusta la distancia desde la parte superior */
-    right: 20px; /* Ajusta la distancia desde la derecha */
+    position: fixed;
+    top: 50px;
+    right: 20px;
     width: 60px;
     height: 60px;
     background: #fff;
@@ -95,7 +105,7 @@ button.btn-primary:hover {
     transition: 0.5s;
     overflow: hidden;
     box-shadow: 0 25px 35px rgba(0, 0, 0, .1);
-    margin-bottom: 20px;
+    z-index: 1000;
 }
 
 .searchBox.active {
