--- a/src/main/resources/static/css/controlPanel.css
+++ b/src/main/resources/static/css/controlPanel.css
@@ -4,11 +4,11 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 body {
-    font-family: Arial, sans-serif;
-    background-image: url('../img/log.jpg');
+
+    background-image: url('../img/a.jpg');
     background-size: cover;
     background-position: center;
 }
@@ -65,4 +65,6 @@ body {
 .form-control {
     margin-bottom: 10px;
 }
-h2{color: yellow}
+h2{text-align: center;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);}
