--- a/src/main/resources/static/css/finPedido.css
+++ b/src/main/resources/static/css/finPedido.css
@@ -2,7 +2,7 @@
 * {
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 
 html, body {
@@ -35,6 +35,6 @@ body {
 }
 
 h2, h3 {
-    text-align: center;
-    color: yellow;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
 }
