--- a/src/main/resources/static/css/historial.css
+++ b/src/main/resources/static/css/historial.css
@@ -1,10 +1,10 @@
 * {
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 body {
-    background-image: url('../img/log.jpg');
+    background-image: url('../img/a.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -12,7 +12,8 @@ body {
 }
 
 h1 {
-    color: yellow;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
     text-align: center;
     margin-top: 20px;
     font-weight: bold;
