--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,24 +3,24 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 
 body {
-    font-family: Arial, sans-serif;
+
     margin: 0;
     padding: 0;
 }
 
 .orange-yellow {
     text-align: center;
-    color: #FFA500;
+    color: orangered;
     text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
 }
 
 /* Background Image */
 .background-image {
-    background-image: url('../img/log.jpg');
+    background-image: url('../img/a.jpg');
     background-size: cover;
     background-position: center;
 }
