--- a/src/main/resources/static/css/inventario.css
+++ b/src/main/resources/static/css/inventario.css
@@ -4,13 +4,13 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 body {
-    font-family: Arial, sans-serif;
+
     margin: 0;
     padding: 20px;
-    background-image: url('../img/log.jpg');
+    background-image: url('../img/a.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -18,8 +18,8 @@ body {
 }
 
 h1 {
-    text-align: center;
-    color: yellow;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
     margin-bottom: 20px;
 }
 
@@ -35,7 +35,7 @@ table {
 }
 
 thead {
-    background-color: #007bff;
+    background-color: darkgray;
     color: #fff;
 }
 
@@ -49,9 +49,7 @@ tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-tr:hover {
-    background-color: #f1f1f1;
-}
+
 
 .form-group {
     display: flex;
@@ -67,7 +65,7 @@ input[type="number"] {
 }
 
 button.btn-primary {
-    background-color: #007bff;
+    background-color: gray;
     border: none;
     color: #fff;
     padding: 5px 10px;
