--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 body {
-    background-image: url("../img/log.jpg");
+    background-image: url("../img/a.jpg");
+    background-size: cover;
+    background-position: center;
 }
 .login-wrapper {
     min-height: 100vh;
     width: 100%;
-    background: url('../img/log.jpg');
+
     background-size: cover;
     display: flex;
     justify-content: center;
