--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -3,12 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    background-image: url("../img/log.jpg");
+
+    background-image: url("../img/a.jpg");
     margin: 0;
     padding: 0;
     background-size: cover;
@@ -18,7 +17,8 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px;
-    color: lightblue;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
 }
 
 .menus-container {
@@ -29,7 +29,7 @@ h1 {
 }
 
 .menu-box {
-    background-color:lightblue;
+    background-color:transparent;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -40,12 +40,13 @@ h1 {
 }
 
 .menu-box h2 {
-    color: #333;
+    color: orangered;
+
     margin-bottom: 10px;
 }
 
 .menu-box p {
-    color: #555;
+    color: orangered;
     margin: 5px 0;
 }
 
