--- a/src/main/resources/static/css/nuevoMenu.css
+++ b/src/main/resources/static/css/nuevoMenu.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 .container {
     display: flex;
@@ -63,7 +63,7 @@ button[type="submit"]:hover {
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
-    background-image: url("../img/log.jpg");
+    background-image: url("../img/a.jpg");
     margin: 0;
     padding: 0;
     background-size: cover;
@@ -71,6 +71,7 @@ body {
 }
 h1{
     text-align: center;
-    color: lightblue;
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
 }
 .error{color: red}
