--- a/src/main/resources/static/css/pedidos.css
+++ b/src/main/resources/static/css/pedidos.css
@@ -3,15 +3,14 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Light";
 }
 
 body {
-    color: yellow; /* Cambio de color del texto a amarillo */
-    background-image: url('../img/log.jpg');
+    color: orangered;
+    background-image: url('../img/a.jpg');
     background-size: cover;
     justify-content: center;
-
 }
 
 .container {
@@ -32,30 +31,46 @@ body {
 }
 
 .table th, .table td {
-    color: yellow; /* Cambio de color del texto de las tablas a amarillo */
+    color: orangered;
 }
 
 .btn-primary {
-    background-color: orange; /* Cambio de color del botón a naranja */
-    border-color: orange; /* Cambio de color del borde del botón a naranja */
+    background-color: #0056b3; /* Azul oscuro para mejor contraste */
+    border-color: #0056b3;
+    color: white; /* Texto blanco para mayor legibilidad */
 }
 
 .btn-primary:hover {
-    background-color: darkorange; /* Cambio de color del botón al pasar el mouse a un tono más oscuro de naranja */
-    border-color: darkorange; /* Cambio de color del borde del botón al pasar el mouse a un tono más oscuro de naranja */
+    background-color: #003d80; /* Azul más oscuro para el hover */
+    border-color: #003d80;
 }
 
 .btn-secondary {
-    background-color: orange; /* Cambio de color del botón secundario a naranja */
-    border-color: orange; /* Cambio de color del borde del botón secundario a naranja */
+    background-color: #28a745; /* Verde para contraste */
+    border-color: #28a745;
+    color: white; /* Texto blanco para mayor legibilidad */
 }
 
 .btn-secondary:hover {
-    background-color: darkorange; /* Cambio de color del botón secundario al pasar el mouse a un tono más oscuro de naranja */
-    border-color: darkorange; /* Cambio de color del borde del botón secundario al pasar el mouse a un tono más oscuro de naranja */
+    background-color: #1e7e34; /* Verde más oscuro para el hover */
+    border-color: #1e7e34;
 }
-h1,h2{color: yellow}
+
+h1, h2 {
+    color: orangered;
+    text-shadow: 2px 2px 6px rgba(255, 255, 0, 0.7), -2px -2px 6px rgba(255, 165, 0, 0.7);
+}
+
 .error {
     color: red;
     font-size: 0.9em;
+}
+
+input[type="email"] {
+    display: block;
+    width: 50%; /* Ajusta el tamaño según tus necesidades */
+    margin: 20px auto; /* Centra el input */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
