--- a/src/main/resources/templates/platos/bebidas.html
+++ b/src/main/resources/templates/platos/bebidas.html
@@ -16,7 +16,7 @@
 <div class="row">
 
     <div class="col-md-4" th:each="plato : ${platos}">
-        <div class="card mb-4 shadow-sm">
+
             <img th:src="${plato.imagen}" class="card-img-top mx-auto d-block" alt="Imagen del plato">
             <div class="card-body">
                 <h5 class="card-title" th:text="${plato.nombre}"></h5>
@@ -27,10 +27,10 @@
                     <input type="hidden" name="idPlato" th:value="${plato.id_plato}">
                     <input type="hidden" name="nombrePlato" th:value="${plato.nombre}">
                     <input type="hidden" name="precioPlato" th:value="${plato.precio}">
-                    <button type="button" class="btn btn-primary agregarBoton">Agregar al pedido</button>
+                    <button type="button" class="btn btn-primary agregarBoton">Agregar</button>
                 </form>
             </div>
-        </div>
+
     </div>
 </div>
 
