--- a/src/main/resources/templates/pedidos/lista.html
+++ b/src/main/resources/templates/pedidos/lista.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head::encabezado(~{::title}, ~{::link})}">
-
     <title>Mi Pedido</title>
     <link rel="stylesheet" th:href="@{/css/pedidos.css}">
 </head>
@@ -58,7 +57,7 @@
     </div>
 
     <form class="mt-3" th:action="@{/pedido/finalizarPedido}" method="post" id="finalizarPedidoForm">
-        <button type="submit" class="btn btn-primary">Finalizar Pedido</button>
+        <button type="submit" class="btn btn-primary">Finalizar</button>
         <span class="error" id="finalizarPedidoError"></span>
     </form>
 
@@ -70,7 +69,7 @@
                 <label for="email">Correo Electrónico</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
             </div>
-            <button type="submit" class="btn btn-secondary">Enviar Email y Finalizar</button>
+            <button type="submit" class="btn btn-secondary">Enviar y Finalizar</button>
             <span class="error" id="enviarReciboEmailError"></span>
         </form>
     </div>
@@ -80,6 +79,8 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script th:src="@{/js/validaciones.js}"></script>
+
 </body>
 </html>
+
 
